--- a/09.while, do while/style.css
+++ b/09.while, do while/style.css
@@ -1,3 +1,9 @@
+.out{
+  display: inline-block;
+  background: rgb(22, 223, 146);
+  /* background: rgb(50, 226, 159); */
+  color: rgb(255, 255, 255);
+}
 .wrapper{
   display: flex;
   justify-content: center;
