--- a/10.work with DOM/style.css
+++ b/10.work with DOM/style.css
@@ -92,9 +92,20 @@ p{
 } */
 .bg-2{
   background: rgb(17, 226, 111);
+  width: 400px;
+  height: 40px;
+  /* color: rgb(255, 255, 255); */
 }
 .bg-3{
   background: rgb(85, 218, 189);
+}
+p{
+  width: 450px;
+  text-align: center;
+  margin: 0;
+  padding: 5px;
+  border: 1px solid #c6ebb8;
+  cursor: pointer;
 }
 
 
