--- a/14.associative arrays/unit-13/css/style.css
+++ b/14.associative arrays/unit-13/css/style.css
@@ -44,3 +44,9 @@ section {
 .active-img {
     border: 3px solid black;
 }
+.block-vis{
+    width: 100px;
+    height: 100px;
+    text-align: center;
+    background: #0da9e8;
+}
