--- a/18. map, filter .1/style.css
+++ b/18. map, filter .1/style.css
@@ -15,7 +15,7 @@
   width: 185px;
   height: 22px;
   margin: 2px 0;
-  background: rgb(255, 255, 255);
+  /* background: rgb(255, 255, 255); */
   border-radius: 5px;
   border: 1px solid #bdbdbd;
   text-align: center;
